--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<h1>Hi. I'm <strong>Greyson Mainor</strong>.</h1>
 					</header>
 					<p>And this is my portfolio detailing my work and showcasing what I have to offer.</p>
- 
+
 				</div>
 			</div>
 		</div>
@@ -43,37 +43,34 @@
 	<article id="work" class="wrapper style2">
 		<div class="container">
 			<header>
-				<h2>Here's all the stuff I do.</h2>
-				<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+				<h2>About me</h2>
+
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-comments"></span>
-						<h3>Consequat lorem</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<h3>Communication skills</h3>
+						<p>I am a team player who is well versed in clear and concise communication.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon solid featured fa-camera-retro"></span>
-						<h3>Lorem dolor tempus</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<span class="icon solid featured fa-code"></span>
+						<h3>Coding</h3>
+						<p>Familar with both front end and back end coding.  Proficient in HTML, CSS, Javascript, JQuery, Node.js, SQL, and React.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
-						<h3>Feugiat posuere</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<h3>Work ethic</h3>
+						<p>Hard working and consistently positive attitude and ready to tackle any challenge thrown my way. </p>
 					</section>
 				</div>
 			</div>
 			<footer>
-				<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+
 				<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 			</footer>
 		</div>
@@ -89,49 +86,57 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-						<h3><a href="#">Magna feugiat</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="https://tsanfordgatech.github.io/HoundandSeek/" class="image featured"><img
+								src="images\Hound.png" alt="" /></a>
+						<h3><a href="https://github.com/GreysonMainor/HoundandSeek">Hound and Seek</a></h3>
+						<p>This application allows users to check out different breeds of dogs and find shelters near
+							them for adoption.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-						<h3><a href="#">Veroeros primis</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="https://app-puppy-play.herokuapp.com/" class="image featured"><img
+								src="images\PuppyPlay.png" alt="" /></a>
+						<h3><a href="https://github.com/dassoumik/project-2">Puppy Play</a></h3>
+						<p>This application allows a user to schedule play dates for their dogs at local parks.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-						<h3><a href="#">Lorem ipsum</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="https://brainstormers.herokuapp.com/" class="image featured"><img
+								src="images\Project-3.png" alt="" /></a>
+						<h3><a href="https://github.com/TSanfordGATech/Project3">Brainstormers</a></h3>
+						<p>An HTML5 gaming website.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-						<h3><a href="#">Tempus dolore</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="https://greysonmainor.github.io/week-5-JQuery-Schedule/" class="image featured"><img
+								src="images\scheduler.png" alt="" /></a>
+						<h3><a href="https://github.com/GreysonMainor/week-5-JQuery-Schedule">Weekday scheduler</a></h3>
+						<p>This application allows a user to schedule upcoming events for their day.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-						<h3><a href="#">Feugiat aliquam</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="https://greysonmainor.github.io/week-3-password-generator/" class="image featured"><img
+								src="images\password.png" alt="" /></a>
+						<h3><a href="https://github.com/GreysonMainor/week-3-password-generator">Password Generator</a>
+						</h3>
+						<p>This application allows a user to generate a random password based on their parameters.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-						<h3><a href="#">Sed amet ornare</a></h3>
-						<p>Ornare nulla proin odio consequat.</p>
+						<a href="#" class="image featured"><img src="images\ecommerce-example.png" alt="" /></a>
+						<h3><a href="https://github.com/GreysonMainor/E-Commerce-backend">Sed amet ornare</a></h3>
+						<p>This application acts as the backend of an Ecommerce store. It allows users to browse through
+							different goods as well as post, update and delete goods as well.</p>
 					</article>
 				</div>
 			</div>
 			<footer>
-				<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+
 				<a href="#contact" class="button large scrolly">Get in touch with me</a>
 			</footer>
 		</div>
@@ -141,8 +146,8 @@
 	<article id="contact" class="wrapper style4">
 		<div class="container medium">
 			<header>
-				<h2>Have me make stuff for you.</h2>
-				<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+				<h2>Contact Me</h2>
+				<p>Please fill out the form below to get into contact with me.</p>
 			</header>
 			<div class="row">
 				<div class="col-12">
@@ -173,8 +178,10 @@
 					<hr />
 					<h3>Find me on ...</h3>
 					<ul class="social">
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/greysonmainor/"
+								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/GreysonMainor" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 						<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
