--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images\ecommerce-example.png" alt="" /></a>
-						<h3><a href="https://github.com/GreysonMainor/E-Commerce-backend">Sed amet ornare</a></h3>
+						<h3><a href="https://github.com/GreysonMainor/E-Commerce-backend">Back-end E-Commerce site</a></h3>
 						<p>This application acts as the backend of an Ecommerce store. It allows users to browse through
 							different goods as well as post, update and delete goods as well.</p>
 					</article>
