updated my about me.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 					<header>
 						<h1>Hi. I'm <strong>Greyson Mainor</strong>.</h1>
 					</header>
-					<p>And this is my portfolio detailing my work and showcasing what I have to offer.</p>
+					<p>I am a solutions-driven Full-Stack Web Developer applying IT background and a strong technical
+						skill set towards building functional and aesthetic applications. I am proficient in HTML, CSS,
+						JavaScript, Jquery as well as basic applications utilizing React. I am an organized and
+						detail-oriented coder who has contributed greatly to past projects by finding ways to write code
+						more efficiently. I have a certificate in Full-Stack development from The Georgia Institute of
+						Technology. My goal is to make coding and programming a life-long career. I have always had an
+						affinity for computers and technology and coding/ programming allows me to pursue what I am
+						passionate about. </p>
 
 				</div>
 			</div>
@@ -58,14 +65,16 @@
 					<section class="box style1">
 						<span class="icon solid featured fa-code"></span>
 						<h3>Coding</h3>
-						<p>Familar with both front end and back end coding.  Proficient in HTML, CSS, Javascript, JQuery, Node.js, SQL, and React.</p>
+						<p>Familar with both front end and back end coding. Proficient in HTML, CSS, Javascript, JQuery,
+							Node.js, SQL, and React.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
 						<h3>Work ethic</h3>
-						<p>Hard working and consistently positive attitude and ready to tackle any challenge thrown my way. </p>
+						<p>Hard working and consistently positive attitude and ready to tackle any challenge thrown my
+							way. </p>
 					</section>
 				</div>
 			</div>
@@ -129,7 +138,8 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images\ecommerce-example.png" alt="" /></a>
-						<h3><a href="https://github.com/GreysonMainor/E-Commerce-backend">Back-end E-Commerce site</a></h3>
+						<h3><a href="https://github.com/GreysonMainor/E-Commerce-backend">Back-end E-Commerce site</a>
+						</h3>
 						<p>This application acts as the backend of an Ecommerce store. It allows users to browse through
 							different goods as well as post, update and delete goods as well.</p>
 					</article>
